# cpp_design_patterns-

SOLID_principles/SOLID_principles/: main.cpp
pattern_Builder/pattern_Builder/: main.cpp
pattern_Builder/pattern_Builder.xcodeproj/: project.pbxproj
pattern_Builder/pattern_Builder.xcodeproj/project.xcworkspace/xcuserdata/tkvitko.xcuserdatad/: UserInterfaceState.xcuserstate
pattern_Builder/pattern_Builder.xcodeproj/xcuserdata/tkvitko.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
pattern_Builder/pattern_Builder.xcodeproj/xcuserdata/tkvitko.xcuserdatad/xcschemes/: xcschememanagement.plist
pattern_ChainOfResponsibility/pattern_ChainOfResponsibility/: main.cpp
pattern_ChainOfResponsibility/pattern_ChainOfResponsibility.xcodeproj/: project.pbxproj
pattern_ChainOfResponsibility/pattern_ChainOfResponsibility.xcodeproj/project.xcworkspace/xcuserdata/tkvitko.xcuserdatad/: UserInterfaceState.xcuserstate
pattern_Command/pattern_Command/: log.txt  main.cpp
pattern_Command/pattern_Command.xcodeproj/: project.pbxproj
pattern_Decorator/pattern_Decorator/: BoldText.cpp  BoldText.hpp  CMakeLists.txt  DecoratedText.cpp  DecoratedText.hpp  ItalicText.cpp  ItalicText.hpp  Link.cpp  Link.hpp  Paragraph.cpp  Paragraph.hpp  Reversed.cpp  Reversed.hpp  Text.cpp  Text.hpp  main.cpp
pattern_Decorator/pattern_Decorator.xcodeproj/: project.pbxproj
pattern_Observer/pattern_Observer/: main.cpp
pattern_Observer/pattern_Observer.xcodeproj/: project.pbxproj
pattern_Proxy/pattern_Proxy/: main.cpp
pattern_Proxy/pattern_Proxy.xcodeproj/: project.pbxproj
(+12 files in other folders)
